# texts-to-transformer-windows

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  pyproject.toml  setup_windows.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
configs/: data.yaml  model-1m.yaml  model-7m.yaml  model-smoke.yaml
docs/: MAC_EXPORT.md  WINDOWS_WALKTHROUGH.md  architecture.md  data-card-template.md  privacy.md  troubleshooting.md
src/imessage_cuda/: __init__.py  audit.py  checkpoint.py  cli.py  config.py  dataset.py  evaluate.py  export.py  generate.py  runtime.py  train.py  utils.py
src/imessage_cuda/data/: __init__.py  attributed_body.py  extract.py  inspect_schema.py  normalize.py  privacy_audit.py  redact.py  sessions.py  snapshot.py  split.py  transfer.py
src/imessage_cuda/model/: __init__.py  config.py  transformer.py
src/imessage_cuda/tokenizer/: __init__.py  train.py
tests/: conftest.py  test_attributed_body.py  test_checkpoint.py  test_extract.py  test_generation.py  test_model.py  test_normalize.py  test_pipeline.py  test_privacy_audit.py  test_redact.py  test_sessions.py  test_snapshot.py  test_split.py  test_tokenizer.py  test_transfer.py  test_utils.py
tests/fixtures/: synthetic_chat.sql  synthetic_messages.jsonl
tools/: export_imessage_snapshot.py
